<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.ClickEventsActivity">

    <Button
            android:text="@string/button_click_xml"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="xmlClick"
            android:id="@+id/btnClicKXML" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_click_line"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/btnClickInLine"
            app:layout_constraintTop_toBottomOf="@+id/btnClicKXML" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/button_multi_1"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/btnClickMulti1"
            app:layout_constraintTop_toBottomOf="@+id/btnClickInLine" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/button_multi_2"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/btnClickMulti2"
            app:layout_constraintTop_toBottomOf="@+id/btnClickMulti1" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/button_multi_3"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:id="@+id/btnClickMulti3"
            app:layout_constraintTop_toBottomOf="@+id/btnClickMulti2" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>