<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.IntentsActivity">

    <Button
            android:text="@string/button_intent_extras"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonIntentExtras"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_intent_flags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonIntentFlags" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonIntentExtra" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/button_intent_object"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonIntentObject" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonIntentFlags" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>